--- a/qqq.plist
+++ b/qqq.plist
@@ -23,7 +23,7 @@
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>feiban</string>
+                <string>八月照相馆</string>
             </dict>
         </dict>
     </array>
