--- a/3.plist
+++ b/3.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://i.taolvpai.com/pic/app/ff/3.ipa</string>
+                    <string>http://i.taolvpai.com/app/ff/3.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
